[package]
name = "lubanso-bitcoin"
version = "0.1.0"
edition = "2021"

[features]
default = [ "std", "secp-recovery" ]
rand-std = ["lubanso-secp256k1/rand-std"]
rand = ["lubanso-secp256k1/rand"]
serde = ["actual-serde", "lubanso-hashes/serde", "lubanso-secp256k1/serde"]
secp-lowmemory = ["lubanso-secp256k1/lowmemory"]
secp-recovery = ["lubanso-secp256k1/recovery"]
bitcoinconsensus-std = ["bitcoinconsensus/std", "std"]
# At least one of std, no-std must be enabled.
#
# The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
# Instead no-std enables additional features required for this crate to be usable without std.
# As a result, both can be enabled without conflict.
std = ["lubanso-secp256k1/std", "lubanso-hashes/std", "bech32/std", "lubanso-internals/std"]
no-std = ["core2", "lubanso-hashes/alloc", "lubanso-hashes/core2", "lubanso-secp256k1/alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lubanso-internals = { path = "../internals"}
lubanso-hashes = { version = "0.1.0", path = "../hashes", default-features = false, optional = true }
bech32 = { version = "0.9.0", default-features = false }
lubanso-secp256k1 = { version = "0.1.0", path = "../secp256k1", default-features = false, features = ["lubanso-hashes"] }
hex_lit = "0.1.1"

base64 = { version = "0.13.0", optional = true }
bitcoinconsensus = { version = "0.20.2-0.5.0", default-features = false, optional = true }
core2 = { version = "0.3.0", default-features = false, features = ["alloc"], optional = true }
# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", default-features = false, features = [ "derive", "alloc" ], optional = true }

[dev-dependencies]
serde_json = "1.0.0"
serde_test = "1.0.19"
serde_derive = "1.0.103"
lubanso-secp256k1 = { version = "0.1.0", path = "../secp256k1", default-features = false, features = ["recovery"] }
bincode = "1.3.1"

[target.'cfg(mutate)'.dev-dependencies]
mutagen = { git = "https://github.com/llogiq/mutagen" }